# my-static-site

./: 404.html  CLAUDE.md  README.md  compose.yaml  index.html  makefile  workspace.code-workspace
.claude/rules/: typescript-guide.md
_app/: version.json
_app/immutable/assets/: 0.B-GD3mXc.css
_app/immutable/chunks/: entry.H8RSENNM.js  entry.Kwi3poUX.js
_app/immutable/entry/: app.BN-Uzc1_.js  app.BiTXwpG3.js  start.BEsKKEev.js  start.Bb17RuRq.js
_app/immutable/nodes/: 1.BFgJQi8z.js  1.DVTjRaRe.js  1.Dau1it3t.js  2.C3BJAt5d.js
app/: version.json
app/immutable/assets/: 0.2Q2Ni5mZ.css  0.B9hsx3cX.css  0.BC3j7IPT.css  0.BM8bczd8.css  0.BRPl2aTv.css  0.BRU8sxj4.css  0.BTZI_De7.css  0.BiR62nPL.css  0.BoOhlkZ7.css  0.BqJKmWue.css  0.BrNV2P9U.css  0.BsvsICB-.css  0.CgxoR_aJ.css  0.D1CkiJkC.css  0.DBfZ3U8R.css  0.DFJ0LsnX.css  0.DFspB-57.css  0.DH97oyQl.css  0.DOdC74TP.css  0.DZP_MP9K.css  0.Di5rZpp0.css  0.DnINjBVi.css  0.DnXWiaHK.css  0.DniPSsvv.css  0.N2ALL3es.css  0.WdsrtsC0.css  0.bmx-T-ok.css  0.h_ZWK7ha.css  0.s0EtLEKM.css  0.zxEXSRqu.css  _layout.7hbRTdiu.css  _layout.8lKjUYqN.css  _layout.BH24rpj0.css  _layout.BTbfdc6l.css  _layout.BVeU16DN.css  _layout.BhEeQ4KK.css  _layout.Bp9I2Yiw.css  _layout.Br0xLY0i.css  _layout.BxieXhdU.css  _layout.C4AI3-vg.css  (+18 more)
app/immutable/chunks/: 2wA9cZ7W.js  6w7BSn9h.js  B0Pr3Nzd.js  B0gnpgC5.js  B642xq45.js  BDs556iQ.js  BFF8JgVh.js  BFOPgHHF.js  BJs_Hbio.js  BLoiVAAW.js  BRz0EnIq.js  BUAkbBSm.js  BZc70dFe.js  B_3YA5R0.js  Bf1-131-.js  BfpQf0Tv.js  Bjn9nAS2.js  BjnOxvUJ.js  Bn1-iLyC.js  Boa6c2Ab.js  BrGlUYeK.js  BrlRvMJm.js  C0z_gOAO.js  C2Zz9Iec.js  C3jSrngy.js  C3pmo9fN.js  C6N_u9u6.js  CC63XHuX.js  CCxRa1OM.js  CEv_QP4y.js  CFeAbHwe.js  CGVzADsp.js  CGZvVaX3.js  CIGQMOs0.js  CIb4pgNl.js  CIuKuh2F.js  CIyRCBb8.js  CK-xV4yX.js  CLb0Wg_W.js  CMKwjJCc.js  (+132 more)
app/immutable/entry/: app.-MNNIrcB.js  app.1AalIrSn.js  app.4txTgO8c.js  app.B8p2kEZN.js  app.B92rtFkF.js  app.BDL6nsMD.js  app.BE87SUE4.js  app.BKAFAOWC.js  app.BZi3hZqc.js  app.BdCYtTgC.js  app.Bs0CyMcy.js  app.BvhzXujQ.js  app.BwTs5yRD.js  app.BynqqOrM.js  app.C3cTfd--.js  app.C4bXowR4.js  app.CFHgAcNy.js  app.CO48Lf8L.js  app.CRnhsVa_.js  app.CSkmczss.js  app.CaLObvun.js  app.CeTZAzeq.js  app.CeedTWSe.js  app.CfVS6ib8.js  app.CiOPkM0-.js  app.ClNRB9Sg.js  app.Cpa67kcP.js  app.CtU7sx1t.js  app.CxhFgtSJ.js  app.D18xFFug.js  app.D9OOwB7K.js  app.DEM1XXyE.js  app.DHnaOAZL.js  app.DJolSqw0.js  app.DXAfDxrn.js  app.D_iuW6Am.js  app.Dh4w17-_.js  app.DlIhI5Cb.js  app.DxWs9gqh.js  app.GCtyH3ou.js  (+52 more)
app/immutable/nodes/: 0.-c2WjYaR.js  0.4gFRx1QA.js  0.B8QWTREf.js  0.BHDCLcUC.js  0.BTBa74v7.js  0.Bd2sYVqC.js  0.Bj2AjoGP.js  0.BkGZEtdP.js  0.Bl1CumKQ.js  0.Bo4u8l_W.js  0.Bpm1NhtE.js  0.BzCF8_Th.js  0.C-JL4vly.js  0.C0QnN6BK.js  0.CHIYVjVd.js  0.CHfTnbGm.js  0.CHx7RSSH.js  0.COPdr8PE.js  0.CPuuQ7AB.js  0.CR-4x0Uw.js  0.CTErwgJt.js  0.Cbi13A43.js  0.CfQj5AVz.js  0.Ct49xM3C.js  0.Cv14wnX5.js  0.CyGpP8Hr.js  0.D0c3Nsfn.js  0.D2q5mDKQ.js  0.Dc3lmjgc.js  0.Dk90hdtq.js  0.FkL1nvOF.js  0.GiD1nerQ.js  0.HdERmc7j.js  0.J4o0ArOU.js  0.Lq9Nxa6r.js  0.U1GyrD83.js  0.VCEh7FuB.js  0.f1sHUPKe.js  0.krVqxgza.js  0.p6ARjjWt.js  (+117 more)
apps/fast-api-server/: pyproject.toml
apps/skeleton-app/: package-lock.json  package.json
apps/skeleton-app/src/lib/application/ports/: IBackendRepository.ts
apps/skeleton-app/src/lib/infrastructure/adapters/: FastApiBackendRepository.ts
apps/skeleton-app/src/routes/: +layout.svelte
apps/skeleton-app/src/routes/(auth)/: +layout.svelte
apps/skeleton-app/src/routes/(auth)/(root)/: +page.svelte
apps/skeleton-app/src/routes/(auth)/example/: +page.svelte
docs/_app/immutable/assets/: _layout.DXWQSqcT.css
docs/_app/immutable/chunks/: entry.DwOuf91V.js
docs/_app/immutable/entry/: app.DUdX9Sj_.js  start.H_tUDKoj.js
docs/_app/immutable/nodes/: 0.DABXsxsE.js
docs/adr/: README.md
fast-api-server/: pyproject.toml
fast-api-server/src/: main.py  settings.py
fast-api-server/src/routes/: heartbeat.py
skeleton-app/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
skeleton-app-v2/: package-lock.json
skeleton-app-v3/: package-lock.json  package.json
skeleton-app-v3/src/: app.css  app.html
skeleton-app-v3/src/lib/modals/: ThemeSwitchModal.svelte
skeleton-app-v3/src/routes/: +layout.svelte
skeleton-app-v3/src/routes/(root)/: +page.svelte
skeleton-app-v3/src/routes/example/: +page.svelte
skeleton-app/src/: app.css  app.html  app.postcss  custom-theme.css
skeleton-app/src/lib/application/utils/: transitions.ts
skeleton-app/src/lib/components/buttons/: AudioToggle.svelte  BeepButton.svelte
skeleton-app/src/lib/components/modals/: ThemeSwitchModal.svelte
skeleton-app/src/lib/components/organisms/: KeyboardInstrument.svelte  KeyboardOneOctave.svelte  MelodyMaker.svelte
skeleton-app/src/lib/presentation/utils/: transitions.ts
skeleton-app/src/lib/stores/: theme.ts
skeleton-app/src/lib/utils/: beep.ts  transitions.ts
skeleton-app/src/routes/: +layout.svelte
skeleton-app/src/routes/(auth)/: +layout.svelte
skeleton-app/src/routes/(auth)/(root)/: +page.svelte  +page.ts
skeleton-app/src/routes/(auth)/example/: +page.svelte
skeleton-app/src/routes/(auth)/sound-test/: +page.svelte
skeleton-app/src/routes/(root)/: +page.svelte  +page.ts
skeleton-app/src/routes/example/: +page.svelte
(+5 files in other folders)
