[project]
name = "fast-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.poe.tasks]
ruff-format = "ruff format ."
ruff-check = "ruff check ."
ruff-fix = "ruff check . --fix"
mypy = "mypy ."

test = "pytest tests/"
lint = ["ruff-format", "ruff-check", "mypy"]
fix = ["ruff-format", "ruff-fix"]
